Bug 610378, initialize effectAllowed properly for external drags, r=smaug,a=bsmedberg